Formulario Historial Tickets

--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmHistorialTicket.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmHistorialTicket.Designer.cs">
+      <DependentUpon>frmHistorialTicket.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmInicioEmpleado.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +78,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmHistorialTicket.resx">
+      <DependentUpon>frmHistorialTicket.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmInicioEmpleado.resx">
       <DependentUpon>frmInicioEmpleado.cs</DependentUpon>
     </EmbeddedResource>
