--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -48,11 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="formAyuda.cs">
+    <Compile Include="frmAyuda.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="formAyuda.Designer.cs">
-      <DependentUpon>formAyuda.cs</DependentUpon>
+    <Compile Include="frmAyuda.Designer.cs">
+      <DependentUpon>frmAyuda.cs</DependentUpon>
     </Compile>
     <Compile Include="frmCrearNuevoTicket.cs">
       <SubType>Form</SubType>
@@ -90,8 +90,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="formAyuda.resx">
-      <DependentUpon>formAyuda.cs</DependentUpon>
+    <EmbeddedResource Include="frmAyuda.resx">
+      <DependentUpon>frmAyuda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmCrearNuevoTicket.resx">
       <DependentUpon>frmCrearNuevoTicket.cs</DependentUpon>
