--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -55,6 +55,12 @@
     <Compile Include="frmAyuda.Designer.cs">
       <DependentUpon>frmAyuda.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAyudaAgente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAyudaAgente.Designer.cs">
+      <DependentUpon>frmAyudaAgente.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAyudaEmpleado.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +105,9 @@
   <ItemGroup>
     <EmbeddedResource Include="frmAyuda.resx">
       <DependentUpon>frmAyuda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAyudaAgente.resx">
+      <DependentUpon>frmAyudaAgente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmAyudaEmpleado.resx">
       <DependentUpon>frmAyudaEmpleado.cs</DependentUpon>
