--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -97,6 +97,7 @@
     <Compile Include="frmInicioSesion.Designer.cs">
       <DependentUpon>frmInicioSesion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Movimiento.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -146,6 +147,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="images\InicioEmpleadoVer.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\ExitMouseDown.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\ExitMouseMove.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\Exit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\ExitMouseEnter.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
