--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -64,6 +64,12 @@
     <Compile Include="frmCrearNuevoTicket.Designer.cs">
       <DependentUpon>frmCrearNuevoTicket.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmGestionarSistemaAdministrador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGestionarSistemaAdministrador.Designer.cs">
+      <DependentUpon>frmGestionarSistemaAdministrador.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmInicioAdministrador.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,8 +138,8 @@
     <EmbeddedResource Include="frmCrearNuevoTicket.resx">
       <DependentUpon>frmCrearNuevoTicket.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmInicioAdministrador.resx">
-      <DependentUpon>frmInicioAdministrador.cs</DependentUpon>
+    <EmbeddedResource Include="frmGestionarSistemaAdministrador.resx">
+      <DependentUpon>frmGestionarSistemaAdministrador.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmInicioAgente.resx">
       <DependentUpon>frmInicioAgente.cs</DependentUpon>
