--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmActualizarEstadoTicketAgente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmActualizarEstadoTicketAgente.Designer.cs">
+      <DependentUpon>frmActualizarEstadoTicketAgente.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAyuda.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,11 +76,11 @@
     <Compile Include="frmGestionarSistemaAdministrador.Designer.cs">
       <DependentUpon>frmGestionarSistemaAdministrador.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmInicioAdministrador.cs">
+    <Compile Include="frmInfoTicketAgente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmInicioAdministrador.Designer.cs">
-      <DependentUpon>frmInicioAdministrador.cs</DependentUpon>
+    <Compile Include="frmInfoTicketAgente.Designer.cs">
+      <DependentUpon>frmInfoTicketAgente.cs</DependentUpon>
     </Compile>
     <Compile Include="frmInicioAgente.cs">
       <SubType>Form</SubType>
@@ -132,6 +138,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmActualizarEstadoTicketAgente.resx">
+      <DependentUpon>frmActualizarEstadoTicketAgente.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAyuda.resx">
       <DependentUpon>frmAyuda.cs</DependentUpon>
     </EmbeddedResource>
@@ -140,6 +149,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmGestionarSistemaAdministrador.resx">
       <DependentUpon>frmGestionarSistemaAdministrador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmInfoTicketAgente.resx">
+      <DependentUpon>frmInfoTicketAgente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmInicioAgente.resx">
       <DependentUpon>frmInicioAgente.cs</DependentUpon>
