--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -88,6 +88,12 @@
     <Compile Include="frmInfoTicketAgente.Designer.cs">
       <DependentUpon>frmInfoTicketAgente.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmInicioAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmInicioAdmin.Designer.cs">
+      <DependentUpon>frmInicioAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmInicioAgente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -162,6 +168,9 @@
     <EmbeddedResource Include="frmInfoTicketAgente.resx">
       <DependentUpon>frmInfoTicketAgente.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmInicioAdmin.resx">
+      <DependentUpon>frmInicioAdmin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmInicioAgente.resx">
       <DependentUpon>frmInicioAgente.cs</DependentUpon>
     </EmbeddedResource>
@@ -208,6 +217,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="images\InicioSupervisorReporte.png" />
+    <None Include="images\InicioAdministradorSistema.png" />
     <Content Include="tslogo.ico" />
   </ItemGroup>
   <ItemGroup />
