--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -142,6 +142,12 @@
     <Compile Include="frmMiEquipoAgente.Designer.cs">
       <DependentUpon>frmMiEquipoAgente.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmReasignarCategoriaTicketAgente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmReasignarCategoriaTicketAgente.Designer.cs">
+      <DependentUpon>frmReasignarCategoriaTicketAgente.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSeleccionarProveedor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -206,6 +212,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMiEquipoAgente.resx">
       <DependentUpon>frmMiEquipoAgente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmReasignarCategoriaTicketAgente.resx">
+      <DependentUpon>frmReasignarCategoriaTicketAgente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSeleccionarProveedor.resx">
       <DependentUpon>frmSeleccionarProveedor.cs</DependentUpon>
