--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -148,6 +148,12 @@
     <Compile Include="frmReasignarCategoriaTicketAgente.Designer.cs">
       <DependentUpon>frmReasignarCategoriaTicketAgente.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSeleccionarCategoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSeleccionarCategoria.Designer.cs">
+      <DependentUpon>frmSeleccionarCategoria.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSeleccionarProveedor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -215,6 +221,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmReasignarCategoriaTicketAgente.resx">
       <DependentUpon>frmReasignarCategoriaTicketAgente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSeleccionarCategoria.resx">
+      <DependentUpon>frmSeleccionarCategoria.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSeleccionarProveedor.resx">
       <DependentUpon>frmSeleccionarProveedor.cs</DependentUpon>
