--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -166,6 +166,12 @@
     <Compile Include="frmSeleccionarProveedor.Designer.cs">
       <DependentUpon>frmSeleccionarProveedor.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSeleccionarUrgencia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSeleccionarUrgencia.Designer.cs">
+      <DependentUpon>frmSeleccionarUrgencia.cs</DependentUpon>
+    </Compile>
     <Compile Include="Movimiento.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -236,6 +242,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSeleccionarProveedor.resx">
       <DependentUpon>frmSeleccionarProveedor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSeleccionarUrgencia.resx">
+      <DependentUpon>frmSeleccionarUrgencia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
