--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -106,6 +106,12 @@
     <Compile Include="frmInfoTicketAgente.Designer.cs">
       <DependentUpon>frmInfoTicketAgente.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmInfoTicketEmpleado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmInfoTicketEmpleado.Designer.cs">
+      <DependentUpon>frmInfoTicketEmpleado.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmInicioAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -218,6 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmInfoTicketAgente.resx">
       <DependentUpon>frmInfoTicketAgente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmInfoTicketEmpleado.resx">
+      <DependentUpon>frmInfoTicketEmpleado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmInicioAdmin.resx">
       <DependentUpon>frmInicioAdmin.cs</DependentUpon>
