--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -94,6 +94,12 @@
     <Compile Include="frmGestionarSistemaAdministrador.Designer.cs">
       <DependentUpon>frmGestionarSistemaAdministrador.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmGestionarUrgencia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGestionarUrgencia.Designer.cs">
+      <DependentUpon>frmGestionarUrgencia.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmGestionProveedores.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -218,6 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmGestionarSistemaAdministrador.resx">
       <DependentUpon>frmGestionarSistemaAdministrador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmGestionarUrgencia.resx">
+      <DependentUpon>frmGestionarUrgencia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmGestionProveedores.resx">
       <DependentUpon>frmGestionProveedores.cs</DependentUpon>
