--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -82,6 +82,12 @@
     <Compile Include="frmGeneradorReportes.Designer.cs">
       <DependentUpon>frmGeneradorReportes.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmGestionarActivoFijo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGestionarActivoFijo.Designer.cs">
+      <DependentUpon>frmGestionarActivoFijo.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmGestionarCategoria.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -224,6 +230,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmGeneradorReportes.resx">
       <DependentUpon>frmGeneradorReportes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmGestionarActivoFijo.resx">
+      <DependentUpon>frmGestionarActivoFijo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmGestionarCategoria.resx">
       <DependentUpon>frmGestionarCategoria.cs</DependentUpon>
