--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -100,6 +100,12 @@
     <Compile Include="frmGestionarSistemaAdministrador.Designer.cs">
       <DependentUpon>frmGestionarSistemaAdministrador.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmGestionarTareas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGestionarTareas.Designer.cs">
+      <DependentUpon>frmGestionarTareas.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmGestionarUrgencia.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -239,6 +245,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmGestionarSistemaAdministrador.resx">
       <DependentUpon>frmGestionarSistemaAdministrador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmGestionarTareas.resx">
+      <DependentUpon>frmGestionarTareas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmGestionarUrgencia.resx">
       <DependentUpon>frmGestionarUrgencia.cs</DependentUpon>
