--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -88,6 +88,12 @@
     <Compile Include="frmGestionarActivoFijo.Designer.cs">
       <DependentUpon>frmGestionarActivoFijo.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmGestionarBiblioteca.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGestionarBiblioteca.Designer.cs">
+      <DependentUpon>frmGestionarBiblioteca.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmGestionarCategoria.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -190,6 +196,12 @@
     <Compile Include="frmSeleccionarActivoFijo.Designer.cs">
       <DependentUpon>frmSeleccionarActivoFijo.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSeleccionarBiblioteca.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSeleccionarBiblioteca.Designer.cs">
+      <DependentUpon>frmSeleccionarBiblioteca.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSeleccionarCategoria.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -239,6 +251,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmGestionarActivoFijo.resx">
       <DependentUpon>frmGestionarActivoFijo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmGestionarBiblioteca.resx">
+      <DependentUpon>frmGestionarBiblioteca.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmGestionarCategoria.resx">
       <DependentUpon>frmGestionarCategoria.cs</DependentUpon>
@@ -290,6 +305,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSeleccionarActivoFijo.resx">
       <DependentUpon>frmSeleccionarActivoFijo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSeleccionarBiblioteca.resx">
+      <DependentUpon>frmSeleccionarBiblioteca.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSeleccionarCategoria.resx">
       <DependentUpon>frmSeleccionarCategoria.cs</DependentUpon>
