--- a/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
+++ b/tablesoft-net/TableSoft/TableSoft/TableSoft.csproj
@@ -118,6 +118,12 @@
     <Compile Include="frmGestionarEmpleados.Designer.cs">
       <DependentUpon>frmGestionarEmpleados.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmGestionarEstado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmGestionarEstado.Designer.cs">
+      <DependentUpon>frmGestionarEstado.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmGestionarSistemaAdministrador.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -302,6 +308,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmGestionarEmpleados.resx">
       <DependentUpon>frmGestionarEmpleados.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmGestionarEstado.resx">
+      <DependentUpon>frmGestionarEstado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmGestionarSistemaAdministrador.resx">
       <DependentUpon>frmGestionarSistemaAdministrador.cs</DependentUpon>
